[metadata]
name = python_tools
version = attr: python_tools.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lixaft/python-tools
author = Fabien Taxil
author_email = lixaft@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7
package_dir = = src

[options.packages.find]
where = src

[bdist_wheel]
universal = True
