[metadata]
name = pythonlib
version = attr: pythonlib.__version__
description = Python utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lixaft/pythonlib
author = Fabien Taxil
author_email = lixaft@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.8
package_dir = = src

[options.packages.find]
where = src

[bdist_wheel]
universal = True

[coverage:run]
branch = True
source = pythonlib

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 100
exclude_lines =
    \#\s*pragma: no cover
    ^\s*@overload( |$)
    ^\s*assert False(,|$)
    ^\s*if TYPE_CHECKING:
    ^\s*raise NotImplementedError\b
    ^\s*return NotImplemented\b
    ^if __name__ == ['"]__main__['"]:$

[isort]
add_imports = from __future__ import annotations
force_single_line = True
line_length = 79
profile = black

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-tests.*]
disallow_untyped_defs = False
